# checkmate

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml  test-release.yml
src/checkmate/: __init__.py  checkmate.tcss  config.py  exceptions.py  main.py  models.py  repository.py  services.py
src/checkmate/screens/: __init__.py  confirm.py  create_task.py  filter.py  sort_select.py  todo_list.py
src/checkmate/widgets/: task_list.py
tests/: test_check_action.py  test_config.py  test_confirm.py  test_filter.py  test_repository.py  test_services.py  test_sort_select.py  test_task_list_filter.py
