[project]
name = "checkmate"
version = "0.1.0"
description = "A todos.txt TUI client"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytodotxt>=3.0.0",
    "textual>=6.6.0",
]
authors = [
    { name = "trly", email = "your.email@example.com" }
]

[project.scripts]
checkmate = "checkmate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/checkmate"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.poe.tasks]
test = "pytest"
tui = "textual run --dev src/checkmate/main.py"
lint = "ruff check"
format = "ruff format"
typecheck = "pyright"
check = ["lint", "typecheck", "test"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"] # Enable Pyflakes, pycodestyle, isort, and Ruff-specific rules
ignore = []
