[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "trly-checkmate"
dynamic = ["version"]
description = "A todos.txt TUI client"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "trly", email = "travis.lyons@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pytodotxt>=3.0.0",
    "textual>=6.6.0",
]

[project.urls]
Homepage = "https://github.com/trly/checkmate"
Issues = "https://github.com/trly/checkmate/issues"

[project.optional-dependencies]
dev = [
    "poethepoet>=0.38.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.6",
]

[project.scripts]
checkmate = "checkmate.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"checkmate" = ["*.tcss"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/checkmate/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=checkmate --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
]

[tool.poe.tasks]
test = "pytest"
tui = "textual run --dev src/checkmate/main.py"
lint = "ruff check"
format = "ruff format"
typecheck = "pyright"
check = ["lint", "typecheck", "test"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "B", "UP"]
ignore = []
exclude = ["src/checkmate/_version.py"]

[tool.ruff.lint.isort]
known-first-party = ["checkmate"]
